remove shadow, build with java 17